Updated 'Join Today' buttons

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
       </div>
       <button class="topButton">Join Today</button>
     </section>
-  
+
     <section class="mainContent">
+      <!-- <img class="desktopXR" src="/images/iPhoneXR.svg"alt="Landing Page for Tipsease Mobile"/> -->
+
       <div class="topContent">
         <div class="indyContent" id="features">
           <h2>Features</h2>
