--- a/index.html
+++ b/index.html
@@ -24,18 +24,16 @@
   
     <section class="welcome">
       <div class="welcomeText">
-        <h1>Tipsease</h1>
+        <h1 id="title">Tipsease</h1>
         <h2>The most transparent way to tip</h2>
       </div>
       <button class="topButton">Join Today</button>
     </section>
 
     <section class="mainContent">
-      <!-- <img class="desktopXR" src="/images/iPhoneXR.svg"alt="Landing Page for Tipsease Mobile"/> -->
-
       <div class="topContent">
         <div class="indyContent" id="features">
-          <h2>Features</h2>
+          <h2 id="feature">Features</h2>
         </div> 
         <div class="indyContent">
           <h3>Transparent</h3>
