Finished presentational aspect of desktop

--- a/index.html
+++ b/index.html
@@ -33,26 +33,30 @@
     <section class="mainContent">
       <div class="topContent">
         <div class="indyContent" id="features">
-          <h2 id="feature">Features</h2>
+          <h3 id="feature">Features</h3>
         </div> 
         <div class="indyContent">
-          <h3>Transparent</h3>
+          <h4>Transparent</h4>
           <p>No more wondering if a tip is split or not.  Tipsease explains exactly where your money is going.</p>
         </div>
         <div class="indyContent">
-          <h3>Instant</h3>
+          <h4>Instant</h4>
           <p>Once you send a tip the receiving party has it in their account immediately.  No more waiting until payday.</p>
         </div>
         <div class="indyContent">
-          <h3>Zero Fees</h3>
+          <h4>Zero Fees</h4>
           <p>Yes, no fees.  We will never charge anyone a fee who uses Tipsease.</p>
         </div>
-        <button class="bottomButton">Join Today</button>
       </div>
+      <button class="bottomButton">Join Today</button>
     </section>
 
     <footer class="footer">
-      <p>Still need to update!</p>
+      <nav>
+        <a href="#">Contact</a>
+        <a href="#">Terms of Service</a>
+        <a href="#">Legal</a>
+      </nav>
     </footer>
   
   </div><!-- container --><!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
