Added a few #ids and changed class names

--- a/index.html
+++ b/index.html
@@ -22,33 +22,31 @@
       </nav>
     </header>
   
-    <section class="welcome">
-      <div class="welcomeText">
+    <section class="welcome-container">
+      <div class="welcome-content">
         <h1 id="title">Tipsease</h1>
-        <h2>The most transparent way to tip</h2>
+        <h2 id="subtitle">The most transparent way to tip</h2>
       </div>
-      <button class="topButton">Join Today</button>
+      <button class="top-button">Join Today</button>
     </section>
 
-    <section class="mainContent">
-      <div class="topContent">
-        <div class="indyContent" id="features">
-          <h3 id="feature">Features</h3>
-        </div> 
-        <div class="indyContent">
-          <h4>Transparent</h4>
-          <p>No more wondering if a tip is split or not.  Tipsease explains exactly where your money is going.</p>
+    <section class="main-content">
+      <div class="mission-statement">
+        <h3 id="feature">Features</h3>
+        <div class="indy-content">
+          <h4 id="indy-header">Transparent</h4>
+          <p id="indy-info">No more wondering if a tip is split or not.  Tipsease explains exactly where your money is going.</p>
         </div>
-        <div class="indyContent">
-          <h4>Instant</h4>
-          <p>Once you send a tip the receiving party has it in their account immediately.  No more waiting until payday.</p>
+        <div class="indy-content">
+          <h4 id="indy-header">Instant</h4>
+          <p id="indy-info">Once you send a tip the receiving party has it in their account immediately.  No more waiting until payday.</p>
         </div>
-        <div class="indyContent">
-          <h4>Zero Fees</h4>
-          <p>Yes, no fees.  We will never charge anyone a fee who uses Tipsease.</p>
+        <div class="indy-content">
+          <h4 id="indy-header">Zero Fees</h4>
+          <p id="indy-info">Yes, no fees.  We will never charge anyone a fee who uses Tipsease.</p>
         </div>
       </div>
-      <button class="bottomButton">Join Today</button>
+      <button class="bottom-button">Join Today</button>
     </section>
 
     <footer class="footer">
