Working on the 'About' page

--- a/index.html
+++ b/index.html
@@ -16,37 +16,37 @@
 
     <header>
       <nav>
-        <a href="#">About</a>
+        <a href="about.html">About</a>
         <a href="#">Tipsease</a>
         <a href="#">Sign in</a>
       </nav>
     </header>
   
-    <section class="welcome-container">
-      <div class="welcome-content">
+    <section class="welcomeContainer">
+      <div class="welcomeContent">
         <h1 id="title">Tipsease</h1>
         <h2 id="subtitle">The most transparent way to tip</h2>
       </div>
-      <button class="top-button">Join Today</button>
+      <button class="topButton">Join Today</button>
     </section>
 
-    <section class="main-content">
-      <div class="mission-statement">
+    <section class="mainContent">
+      <div class="missionStatement">
         <h3 id="feature">Features</h3>
-        <div class="indy-content">
-          <h4 id="indy-header">Transparent</h4>
-          <p id="indy-info">No more wondering if a tip is split or not.  Tipsease explains exactly where your money is going.</p>
+        <div class="indyContent">
+          <h4 class="indyHeader">Transparent</h4>
+          <p class="indyInfo">No more wondering if a tip is split or not.  Tipsease explains exactly where your money is going.</p>
         </div>
-        <div class="indy-content">
-          <h4 id="indy-header">Instant</h4>
-          <p id="indy-info">Once you send a tip the receiving party has it in their account immediately.  No more waiting until payday.</p>
+        <div class="indyContent">
+          <h4 class="indyHeader">Instant</h4>
+          <p class="indyInfo">Once you send a tip the receiving party has it in their account immediately.  No more waiting until payday.</p>
         </div>
-        <div class="indy-content">
-          <h4 id="indy-header">Zero Fees</h4>
-          <p id="indy-info">Yes, no fees.  We will never charge anyone a fee who uses Tipsease.</p>
+        <div class="indyContent">
+          <h4 class="indyHeader">Zero Fees</h4>
+          <p class="indyInfo">Yes, no fees.  We will never charge anyone a fee who uses Tipsease.</p>
         </div>
       </div>
-      <button class="bottom-button">Join Today</button>
+      <button class="bottomButton">Join Today</button>
     </section>
 
     <footer class="footer">
