Finished deskptop version of 'About' page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <button class="bottomButton">Join Today</button>
     </section>
 
-    <footer class="footer">
+    <footer class="homeFooter">
       <nav>
         <a href="#">Contact</a>
         <a href="#">Terms of Service</a>
