Almost finished with mobile breakpoints for 'About' page

--- a/index.html
+++ b/index.html
@@ -31,21 +31,28 @@
     </section>
 
     <section class="mainContent">
-      <div class="missionStatement">
-        <h3 id="feature">Features</h3>
-        <div class="indyContent">
-          <h4 class="indyHeader">Transparent</h4>
-          <p class="indyInfo">No more wondering if a tip is split or not.  Tipsease explains exactly where your money is going.</p>
+
+      <div class=middleContainer>
+
+        <img src="/images/iPhoneXR.svg" type="How to Enter a Tip!">
+
+        <div class="missionStatement">
+          
+          <h3 id="feature">Features</h3>
+          <div class="indyContent">
+            <h4 class="indyHeader">Transparent</h4>
+            <p class="indyInfo">No more wondering if a tip is split or not.  Tipsease explains exactly where your money is going.</p>
+          </div>
+          <div class="indyContent">
+            <h4 class="indyHeader">Instant</h4>
+            <p class="indyInfo">Once you send a tip the receiving party has it in their account immediately.  No more waiting until payday.</p>
+          </div>
+          <div class="indyContent">
+            <h4 class="indyHeader">Zero Fees</h4>
+            <p class="indyInfo">Yes, no fees.  We will never charge anyone a fee who uses Tipsease.</p>
+          </div>
         </div>
-        <div class="indyContent">
-          <h4 class="indyHeader">Instant</h4>
-          <p class="indyInfo">Once you send a tip the receiving party has it in their account immediately.  No more waiting until payday.</p>
-        </div>
-        <div class="indyContent">
-          <h4 class="indyHeader">Zero Fees</h4>
-          <p class="indyInfo">Yes, no fees.  We will never charge anyone a fee who uses Tipsease.</p>
-        </div>
-      </div>
+      </div>  
       <button class="bottomButton">Join Today</button>
     </section>
 
