Finished arranging profile pictures in mobile

--- a/about.html
+++ b/about.html
@@ -53,56 +53,56 @@
             <div class="teamMembers" id="victor">
                 <embed src="/images/Victor.svg" alt="Victor-Project Leader">
                 <div class="profileContainer">
-                    <p class="name">Victor Goico</p>
+                    <a href="https://github.com/VictorGoic0" target="_blank" class="name">Victor Goico</a>
                     <p class="role">Project leader</p>
                 </div>  
             </div>   
             <div class="teamMembers" id="trevor">
                 <embed src="/images/Trevor.svg" alt="Trevor-UI Developer">
                 <div class="profileContainer">
-                    <p class="name">Trevor Von Bruenchenhein</p>
+                    <a href="https://github.com/tjvonbr" target="_blank" class="name">Trevor Von Bruenchenhein</a>
                     <p class="role">UI developer</p>
                 </div>
             </div>     
             <div class="teamMembers" id="alec">
                 <embed src="/images/Alec.svg" alt="Alec-UI Developer">
                 <div class="profileContainer">
-                    <p class="name">Alec Thomas Quinn</p>
+                    <a href="https://github.com/AlecThomasQuinn" target="_blank" class="name">Alec Thomas Quinn</a>
                     <p class="role">UI developer</p>
                 </div>
             </div>   
             <div class="teamMembers" id="marlon">
                 <embed src="/images/Marlon.svg" alt="Marlon-iOS Developer">
                 <div class="profileContainer">
-                    <p class="name">Marlon Raskin</p>
+                    <a href="https://github.com/marlonjames71" target="_blank" class="name">Marlon Raskin</a>
                     <p class="role">iOS developer</p>
                 </div>
             </div> 
             <div class="teamMembers" id="alex">
                 <embed src="images/Alex.svg" alt="Alex-iOS developer">
                 <div class="profileContainer">
-                    <p class="name">Alex Shillingford</p>
+                    <a href="https://github.com/shillwil" target="_blank" class="name">Alex Shillingford</a>
                     <p class="role">iOS developer</p>
                 </div> 
             </div>      
             <div class="teamMembers" id="jacob">
                 <embed src="images/Jacob.svg" alt="Jacob-Backend Developer">
                 <div class="profileContainer">
-                    <p class="name">Jacob Tonna</p>
+                    <a href="https://github.com/Jtonna" target="_blank" class="name">Jacob Tonna</a>
                     <p class="role">Backend developer</p>
                 </div> 
             </div>  
             <div class="teamMembers" id="zeke">
                 <embed src="images/Zeke.svg" alt="Zeke-UX/UI Designer">
                 <div class="profileContainer">
-                    <p class="name">Zeke Kooyer</p>
+                    <a href="https://twitter.com/KooyerZeke" target="_blank" class="name">Zeke Kooyer</a>
                     <p class="role">UX/UI designer</p>
                 </div>
             </div> 
             <div class="teamMembers" id="joseph">
                 <embed src="images/Joseph.svg" alt="Joseph-Frontend Developer">
                 <div class="profileContainer">
-                    <p class="name">Joseph C.A. Garcia</p>
+                    <a href="https://github.com/kingmoc" target="_blank" class="name">Joseph C.A. Garcia</a>
                     <p class="role">Frontend developer</p>
                 </div>
             </div>   
