Still need to create a component

--- a/about.html
+++ b/about.html
@@ -6,25 +6,25 @@
   <meta charset="utf-8">
   <title>Tipsease</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
+  <script src="js/index.js" async></script>
 
 </head>
 
 <body>
+  
   <div class="container">
-    <div class="box">
-    
-    </div>
     <header>
+      <embed src="images/blue-blob.svg" class="blob" alt="Big Blue Blob">
       <nav>
-        <a href="#">About</a>
-        <a href="index.html">Tipsease</a>
-        <a href="#">Sign in</a>
+        <a href="#"></a>
+        <a href="index.html"></a>
+        <a href="#"></a>
       </nav>
     </header>
   
     <section class="aboutContainer">
+        <embed src="images/Desktop-about-graphic.svg" class="aboutImg" type="">
         <div class="aboutTitle">
             <h1 id="title">What we do</h1>
         </div>
@@ -42,7 +42,7 @@
             <div class="smallContentContainer">
                 <h4 class="aboutHeader">Zero Fees</h4>
 
-                <p class="aboutContent" id="lastEntry">Tipsease is commited to benefit service     workers of all types.  That means zero fees, one hundred percent of the time.</p>
+                <p class="aboutContent" id="lastEntry">Tipsease is commited to benefit service workers of all types.  That means zero fees, one hundred percent of the time.</p>
             </div>        
         </div>
     </section>
@@ -51,28 +51,28 @@
         <h2>Who we are</h2>
         <div class="team">
             <div class="teamMembers" id="victor">
-                <embed src="/images/Victor.svg" alt="Victor-Project Leader">
+                <embed src="images/Victor.svg" alt="Victor-Project Leader">
                 <div class="profileContainer">
                     <a href="https://github.com/VictorGoic0" target="_blank" class="name">Victor Goico</a>
                     <p class="role">Project leader</p>
                 </div>  
             </div>   
             <div class="teamMembers" id="trevor">
-                <embed src="/images/Trevor.svg" alt="Trevor-UI Developer">
+                <embed src="images/Trevor.svg" alt="Trevor-UI Developer">
                 <div class="profileContainer">
                     <a href="https://github.com/tjvonbr" target="_blank" class="name">Trevor Von Bruenchenhein</a>
                     <p class="role">UI developer</p>
                 </div>
             </div>     
             <div class="teamMembers" id="alec">
-                <embed src="/images/Alec.svg" alt="Alec-UI Developer">
+                <embed src="images/Alec.svg" alt="Alec-UI Developer">
                 <div class="profileContainer">
                     <a href="https://github.com/AlecThomasQuinn" target="_blank" class="name">Alec Thomas Quinn</a>
                     <p class="role">UI developer</p>
                 </div>
             </div>   
             <div class="teamMembers" id="marlon">
-                <embed src="/images/Marlon.svg" alt="Marlon-iOS Developer">
+                <embed src="images/Marlon.svg" alt="Marlon-iOS Developer">
                 <div class="profileContainer">
                     <a href="https://github.com/marlonjames71" target="_blank" class="name">Marlon Raskin</a>
                     <p class="role">iOS developer</p>
@@ -111,9 +111,9 @@
 
     <footer class="aboutFooter">
             <nav>
-              <a href="#">Contact</a>
-              <a href="#">Terms of Service</a>
-              <a href="#">Legal</a>
+              <a href="#"></a>
+              <a href="#"></a>
+              <a href="#"></a>
             </nav>
           </footer>
   </div><!-- container --><!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
