--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
+  <script src="js/index.js" async></script>
 
 </head>
 
 <body>
   <div class="container">
-
     <header>
+      <embed src="images/blue-blob.svg" class="blob" alt="Big Blue Blob">
       <nav>
-        <a href="about.html">About</a>
-        <a href="#">Tipsease</a>
-        <a href="#">Sign in</a>
+        <a href="about.html"></a>
+        <a href="#"></a>
+        <a href="#"></a>
       </nav>
     </header>
   
@@ -34,10 +35,10 @@
 
       <div class=middleContainer>
 
-        <img src="/images/iPhoneXR.svg" type="How to Enter a Tip!">
+        <embed src="images/iPhoneXR.svg" class="iphoneImg" type="How to Enter a Tip!">
 
         <div class="missionStatement">
-          
+
           <h3 id="feature">Features</h3>
           <div class="indyContent">
             <h4 class="indyHeader">Transparent</h4>
@@ -58,9 +59,9 @@
 
     <footer class="homeFooter">
       <nav>
-        <a href="#">Contact</a>
-        <a href="#">Terms of Service</a>
-        <a href="#">Legal</a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
       </nav>
     </footer>
   
