Eliminated bottom button on mobile, fixed iPhone image, & linked front end

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
       <nav>
         <a href="#"></a>
         <a href="index.html"></a>
-        <a href="#"></a>
+        <a href="https://bw-tipsease.netlify.com/"></a>
       </nav>
     </header>
   
