--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <a href="about.html"></a>
         <a href="#"></a>
-        <a href="#"></a>
+        <a href="https://bw-tipsease.netlify.com/"></a>
       </nav>
     </header>
   
@@ -28,14 +28,14 @@
         <h1 id="title">Tipsease</h1>
         <h2 id="subtitle">The most transparent way to tip</h2>
       </div>
-      <button class="topButton">Join Today</button>
+      <button onclick="window.location.href = 'https://bw-tipsease.netlify.com/';" class="topButton">Join Today</button>
     </section>
 
     <section class="mainContent">
 
       <div class=middleContainer>
 
-        <embed src="images/iPhoneXR.svg" class="iphoneImg" type="How to Enter a Tip!">
+        <embed src="../images/iPhoneXR.svg" class="iphoneImg" alt="How to Enter a Tip!">
 
         <div class="missionStatement">
 
@@ -54,7 +54,7 @@
           </div>
         </div>
       </div>  
-      <button class="bottomButton">Join Today</button>
+      <button onclick="window.location.href = 'https://bw-tipsease.netlify.com/';" class="bottomButton">Join Today</button>
     </section>
 
     <footer class="homeFooter">
